--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,16 @@
-
-<html>
-    <head>
-        <title>First Blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="">Django Girls Blog</a></h1>
-        </div>
-     {% for post in posts %}
-    	<div>
-	        <p>published: {{ post.published_date }}</p>
-	        <h1><a href="">{{ post.title }}</a></h1>
-	        <p>{{ post.text|linebreaksbr }}</p>
-    	</div>
+{% extends 'blog/base.html' %}																		
+{%block content %}
+{% for post in posts %}
+    <div class="post">
+    	{% if post.published_date %}
+	        <div class="date">
+	            {{ post.published_date }}
+	        </div>
+	     {% endif %}
+	     <h1>{{ post.title }}</h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+       <!--<h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p> -->
+    </div>
 {% endfor %}
-    </body>
-</html
+{%endblock%}
